--- a/package.json
+++ b/package.json
@@ -71,11 +71,13 @@
     "compression": "1.7.4",
     "connected-react-router": "6.4.0",
     "cross-env": "5.2.0",
+    "deepdash": "^5.3.0",
     "express": "4.16.4",
     "fontfaceobserver": "2.1.0",
     "history": "4.9.0",
     "hoist-non-react-statics": "3.3.0",
     "immer": "3.0.0",
+    "immutable": "^4.0.0-rc.12",
     "intl": "1.2.5",
     "invariant": "2.2.4",
     "ip": "1.1.5",
@@ -88,7 +90,8 @@
     "react-intl": "2.8.0",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
-    "react-table": "^7.5.1",
+    "react-table": "^7.5.2",
+    "react-table-v6": "^6.8.6",
     "redux": "4.0.1",
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
@@ -152,7 +155,7 @@
     "react-testing-library": "6.1.2",
     "rimraf": "2.6.3",
     "shelljs": "^0.8.3",
-    "style-loader": "0.23.1",
+    "style-loader": "^0.23.1",
     "stylelint": "10.0.1",
     "stylelint-config-recommended": "2.2.0",
     "stylelint-config-styled-components": "0.1.1",
